-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: javafx
-
Environment:
Ubuntu 14.04
jdk-9+155
Steps to reproduce:
1. Run the HelloFullscreenToggle program:
java -cp apps/toys/Hello/dist/Hello.jar hello.HelloFullscreenToggle
2. Press the "Toggle Fullscreen" button to entire full screen
3. Exit full screen, either using the ESC key or by pressing the "Toggle Fullscreen" button again.
BUG: the window position is not restored, but moves to the upper left of the screen.
This worked in last week's build so it is a recent regression.
1. Run the HelloFullscreenToggle program:
java -cp apps/toys/Hello/dist/Hello.jar hello.HelloFullscreenToggle
2. Press the "Toggle Fullscreen" button to entire full screen
3. Exit full screen, either using the ESC key or by pressing the "Toggle Fullscreen" button again.
BUG: the window position is not restored, but moves to the upper left of the screen.
This worked in last week's build so it is a recent regression.
- relates to
-
JDK-8175204 Linux: Dialog windows come up 1-pixel wide
-
- Resolved
-
-
JDK-8175822 Pulldown position regression and not painting correctly tooltips regression
-
- Resolved
-