8173901: Linux: Position of Stage is not restored after exiting full screen

Reviewed-by: kcr, azvegint, ddhill